--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
             
             <div class="resume-item">
               <p>
-              [2024.04] ViboPneumo was accepted by IEEE TVCG! <br>
+              [2024.09] ThermOuch was accepted by SIGGRAPH ASIA 2024 as a technical paper!<br>  
+              [2024.04] ViboPneumo was accepted by <em>IEEE TVCG</em>! <br>
+              [2024.01] Skin-integrated haptic interface has been accepted by <em>Nature Electronics</em>. <br>
+              [2023.12] One paper accepted by <em>Computers & Graphics</em>!<br>
               [2023.12] I started a new position at College of Design and Engineering, National University of Singapore as a Lecturer! <br>
-              [2023.07] I pass my PhD denfense, thank my supervisor and thesis committee members!!! <br>
-              [2022.10] I received multiple honors from CCVR 2022! <br>
-              [2022.10] I attended ISMAR2022 in Singapore!<br>
+               
 
               <!--<p>[2020.10] FrictGAN was accepted by ICAT-EGVE 2020.</p>-->
               <p class="font-italic"><a href="#more">More...</a></p>
@@ -156,11 +157,26 @@
         <!-- paper -->
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/Thermouch.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>ThermOuch: A Wearable Thermo-Haptic Device for Inducing Pain Sensation in Virtual Reality through Thermal Grill Illusion</h5>
+              <p>Haichen Gao, <em><b>Shaoyu Cai</b>, Yuhong Wu, and Kening Zhu</em></p>
+              <p><em>In SIGGRAPH Asia 2024 Conference Papers, December 03–06, 2024, Tokyo, Japan. ACM, New York, NY, USA, 12 pages. </em></p>
+               [<a href="assets/img/thermouch_paper.pdf">Paper</a>] 
+               [<a href="https://youtu.be/iCKXcDOM4B4?si=8QrqskaO004q6CTT">Video</a>]
+	      </p>
+          </div>
+        </div> 
+
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/vibopneumo.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
-              <h5></h5>ViboPneumo: A Vibratory-Pneumatic Finger-Worn Haptic Device for Altering Perceived Texture Roughness in Mixed Reality</h5>
+              <h5>ViboPneumo: A Vibratory-Pneumatic Finger-Worn Haptic Device for Altering Perceived Texture Roughness in Mixed Reality</h5>
               <p><em><b>Shaoyu Cai</b>, Zhenlin Chen, Haichen Gao, Ya Huang, Qi Zhang, Xinge Yu, and Kening Zhu</em></p>
               <p><em>In 2024 IEEE Transactions on Visualization & Computer Graphics. </em></p>
                [<a href="assets/img/vibo_paper.pdf">Paper</a>] 
@@ -665,6 +681,8 @@
         <!--<div class="col-lg-2 col-md-3 pt-lg-4" data-aos="fade-left">-->
         <div class="col-lg-2 col-md-3 pt-lg-4"></div>
           <p class="font-italic">
+          [2022.10] I received multiple honors from CCVR 2022! <br>
+          [2022.10] I attended ISMAR2022 in Singapore!<br>
           [2022.09] <em>PropelWalker</em> was accepted by TVCG!<br>
           [2022.08] One poster paper was accepted in ISMAR 2022!<br>
           [2022.03] I started a visiting study in Wearable Systems Lab at Shanghai Jiaotong University!<br>
