--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.-->
               His research objective is to explore how to develop “touchable” computer interfaces to enable people to have physical interaction in the virtual world. 
               He strongly believes haptic interaction can provide greater benefit and experience to users in extended reality (XR) environments, including virtual and augmented reality (VR & AR). 
-              His research interest mainly focuses on Human-Computer Interaction, particularly in the areas of Multimodal and Embodied Interaction, Extended Reality, Wearables, and Haptic Interfaces. 
+              His research interest mainly focuses on Human-Computer Interaction (HCI), particularly in the areas of Multimodal and Embodied Interaction, Extended Reality, Wearables, and Haptic Interfaces. 
               
               <div class="email" class="font-italic">
                 <p><b>Contact Me:</b> <em>shaoyucai [AT] nus [DOT] edu [DOT] sg</em></p> 
