--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <!--<<li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>-->
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+        <li><a href="#News" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>News</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publication</span></a></li>
-        <!--<li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li>-->
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <!--<li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>-->
+        <!--<li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>-->
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -61,7 +61,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shaoyu Cai</h1>
       <p>I am a researcher in Human-computer Interaction(HCI)</p>
-        <!-- <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>-->
+         <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>-->
       <!--<div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -109,14 +109,13 @@
                 [<a href="https://scholar.google.com/citations?user=wUpkNc8AAAAJ&hl=en">Google Scholar</a>]
                 [<a href="https://dblp.org/pid/246/5542.html">dblp</a>][<a href="https://www.linkedin.com/in/shaoyu-cai-63a96523a">Linkedin</a>]
               </p>
-              
           </div>
         </div>
       </div>
     </section><!-- End About Section -->
 
     <!-- ======= news Section ======= -->
-    <section id="facts" class="facts">
+    <section id="News" class="News">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -162,7 +161,7 @@
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>ThermOuch: A Wearable Thermo-Haptic Device for Inducing Pain Sensation in Virtual Reality through Thermal Grill Illusion</h5>
-              <p>Haichen Gao, <em><b>Shaoyu Cai</b>, Yuhong Wu, and Kening Zhu</em></p>
+              <p><em>Haichen Gao, <b>Shaoyu Cai</b>, Yuhong Wu, and Kening Zhu</em></p>
               <p><em>In SIGGRAPH Asia 2024 Conference Papers, December 03–06, 2024, Tokyo, Japan. ACM, New York, NY, USA, 12 pages. </em></p>
                [<a href="assets/img/thermouch_paper.pdf">Paper</a>] 
                [<a href="https://youtu.be/iCKXcDOM4B4?si=8QrqskaO004q6CTT">Video</a>]
@@ -516,7 +515,7 @@
 
     
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Portfolio Section ======= 
     <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -667,7 +666,7 @@
 
         </div>
 
-      </div>
+      </div> -->
     </section><!-- End Portfolio Section -->
 
     <!-- ======= more Section ======= -->
@@ -701,7 +700,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Contact Section ======= -->
+    <!-- ======= Contact Section ======= 
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
@@ -760,14 +759,13 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section> --><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Shaoyu Cai</h3>
       <div class="copyright">
         &copy; Copyright <strong><span>Shaoyu Cai</span></strong>. All Rights Reserved
       </div>
