--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             
             <div class="resume-item">
               <p>
-              [2025.05] <em>ThermOuch</em> received Silver Medal at the 50th International Exhibition of Inventions Geneva!
+              [2025.05] <em>ThermOuch</em> received Silver Medal at the 50th International Exhibition of Inventions Geneva!<br>
               [2025.05] I will serve as program manager (Co-chair) for Siggraph Asia 2025 Emerging Technologies and program committe for UbiComp/ISWC 2025! <br>
               [2025.04] <em>VirCHEW Reality</em> was accepted by SIGGRAPH 2025 as a technical paper! <br>
               [2024.09] <em>ThermOuch</em> was accepted by SIGGRAPH ASIA 2024 as a technical paper!<br>  
