--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <!-- paper -->
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
-            <img src="assets/img/cg.JPG" class="img-fluid" alt="">
+            <img src="assets/img/cg.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
