--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
               His research interest mainly focuses on Human-Computer Interaction (HCI), particularly in the areas of Multimodal and Embodied Interaction, Extended Reality, Wearables, and Haptic Interfaces. 
               
               <div class="email" class="font-italic">
-                <p><b>Contact Me:</b> <em>shaoyucai [AT] nus [DOT] edu [DOT] sg</em></p> 
+                <p><b>I am always looking for self-motivated students for HCI and VR/AR-related research. Feel free to contact me if you are interested </b></p> 
+                <p><b>I am particularly welcome NUS MSc students who are willing to do <a href="https://blog.nus.edu.sg/multimodalwearablelab/welcome">CDE5312</a> or EDI internship modules and NUS undergraduates UROP/UREX/FYP. </b></p> 
+                <p>My contact: <em>shaoyucai [AT] nus [DOT] edu [DOT] sg</em></p>
               </div>
               <p>
                 [<a href="https://cde.nus.edu.sg/edic/staff/cai-shaoyu/">NUS Profile</a>]
