--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
             
             <div class="resume-item">
               <p>
+              [2025.09] One paper accepted by PAINE 2025. Congrads to Zhansen and Quanhao!<br>
+              [2025.09] One paper was accepted as CSCW 25'. Congrads to Xinpeng!<br>
               [2025.07] <em>Somewhere in This Fog of Memory</em> was accpeted by GoodIT 25! Congrads to Zhansen!<br>
               [2025.07] <em>AromaCanvas</em> was accpeted by CEXR! Congrads to Tao, Quanhao and Fuxi!<br>
-              [2025.05] <em>ThermOuch</em> received Silver Medal at the 50th International Exhibition of Inventions Geneva!<br>
               [2025.05] I will serve as program manager (Co-chair) for Siggraph Asia 2025 Emerging Technologies and program committe for UbiComp/ISWC 2025! <br>
               [2025.04] <em>VirCHEW Reality</em> was accepted by SIGGRAPH 2025 as a technical paper! <br>
               [2024.09] <em>ThermOuch</em> was accepted by SIGGRAPH ASIA 2024 as a technical paper!<br>  
-              [2024.04] <em>ViboPneumo</em> was accepted by <em>IEEE TVCG</em>! <br>
-              [2024.01] Skin-integrated haptic interface has been accepted by <em>Nature Electronics</em>. <br>
+
               <!--<p>[2020.10] FrictGAN was accepted by ICAT-EGVE 2020.</p>-->
               <p class="font-italic"><a href="#more">More...</a></p>
             </div>
@@ -226,7 +226,7 @@
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>A Skin-integrated Multimodal Haptic Interface for Immersive Tactile Feedback</h5>
-              <p><em>Ya Huang, Jingkun Zhou, Pingchuan Ke, Xu Guo, Chun Ki Yiu, Kuanming Yao, <b>Shaoyu Cai</b>, Dengfeng Li, Yu Zhou, ..., Xinge Yu</em></p>
+              <p><em>Ya Huang, Jingkun Zhou, Pingchuan Ke, Xu Guo, Chun Ki Yiu, Kuanming Yao, <b>Shaoyu Cai</b>, Dengfeng Li, Yu Zhou, ..., Kening Zhu, and Xinge Yu</em></p>
               <p><em>Nature Electronics 6, 1020–1031 (2023). </em></p>
                [<a href="assets/img/ne2023.pdf">Paper</a>] 
                [<a href="https://www.youtube.com/watch?v=3byUf94J1QM">Video</a>]
@@ -248,7 +248,7 @@
 	      </p>
           </div>
         </div> 
-        <!-- paper -->
+        <!-- paper 
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/ismar23.png" class="img-fluid" alt="">
@@ -261,7 +261,7 @@
                [<a href="assets/img/Comparing_Perceptual.pdf">Paper</a>]
 	      </p>
           </div>
-        </div> 
+        </div> -->
 
         <!-- paper -->
         <div class="row">
@@ -311,7 +311,7 @@
           </div>
         </div>
 
-        <!-- paper -->
+        <!-- paper 
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/weightwalk.jpg" class="img-fluid" alt="">
@@ -326,6 +326,7 @@
 	      </p>
           </div>
         </div>
+        -->
 
         <!-- paper0 -->
         <div class="row">
@@ -376,7 +377,7 @@
 	      </p>
           </div>
         </div>
-
+      <!--
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/ett.jpg" class="img-fluid" alt="">
@@ -391,7 +392,7 @@
 	    </p>
           </div>
         </div>
-
+        -->
         <div class="row">
           <div class="col-lg-2 col-md-3  pt-lg-4">
             <img src="assets/img/thermring.JPG" class="img-fluid" alt="">
@@ -714,6 +715,8 @@
         <!--<div class="col-lg-2 col-md-3 pt-lg-4" data-aos="fade-left">-->
         <div class="col-lg-2 col-md-3 pt-lg-4"></div>
           <p class="font-italic">
+          [2024.04] <em>ViboPneumo</em> was accepted by <em>IEEE TVCG</em>! <br>
+          [2024.01] Skin-integrated haptic interface has been accepted by <em>Nature Electronics</em>. <br>
           [2023.12] One paper accepted by <em>Computers & Graphics</em>!<br>
           [2023.12] I started a new position at College of Design and Engineering, National University of Singapore as a Lecturer! <br>
           [2022.10] I received multiple honors from CCVR 2022! <br>
