--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             
             <div class="resume-item">
               <p>
+              
               [2025.09] One paper accepted by PAINE 2025. Congrads to Zhansen and Quanhao!<br>
               [2025.09] One paper was accepted as CSCW 25'. Congrads to Xinpeng!<br>
               [2025.07] <em>Somewhere in This Fog of Memory</em> was accpeted by GoodIT 25! Congrads to Zhansen!<br>
@@ -158,6 +159,20 @@
         </div>
 
         <!-- paper -->
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/mura.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>From Beeping Machines to Caring Companions: Redesigning Social Robots Through Reflective Ethnography in Elderly Care Work</h5>
+              <p><em>Xinpeng Liu, Haosu Xu, Yiming Luo, and <b>Shaoyu Cai</b>.</em></p>
+              <p><em>Proceedings of the ACM on Human-Computer Interaction, 9(7), 1-29. <b>(CSCW 2025 Best Paper Honorable Mentions)</b> </em></p>
+               [<a href="https://dl.acm.org/doi/pdf/10.1145/3757603">Paper</a>]
+	      </p>
+          </div>
+        </div>
+
           <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/aromacanvas.png" class="img-fluid" alt="">
