--- a/index.html
+++ b/index.html
@@ -94,23 +94,22 @@
               </style>
             <h3><p class="chinese">Shaoyu Cai 蔡紹禹</p></h3>
             <p style="text-align:justify" class="font-italic">
-              Dr. Shaoyu Cai is currently an educator-track lecturer at the <a href="https://cde.nus.edu.sg/edic/">Engineering Design and Innovation Centre (EDIC)</a>, College of Design and Engineering, National University of Singapore (NUS). He also serves as Co-director in NUS Immersive Reality Lab. He received his Ph.D. degree <!--under the supervision of <a href="https://meilab-hk.github.io/">Prof. Kening Zhu</a>--> from School of Creative Media, City University of Hong Kong (2023). <!--He received B.Eng degree from College of Engineering, Huazhong Agricultural University (2018).-->
-              <!--He was a visiting researcher at the University of Tokyo (2020) and Shanghai Jiao Tong University (2022). and working closely with <a href="https://www.cyber.t.u-tokyo.ac.jp/">Prof. Takuji Narumi</a> and <a href="http://www.lhei.k.u-tokyo.ac.jp/">Prof. Yuki Ban</a>. 
-              as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.-->
+              Dr. Shaoyu Cai is currently an educator-track lecturer at the <a href="https://cde.nus.edu.sg/edic/">Engineering Design and Innovation Centre (EDIC)</a>, College of Design and Engineering, National University of Singapore (NUS). He also serves as Co-director in <a href="https://blog.nus.edu.sg/immersiverealitylab/">NUS Immersive Reality Lab</a>. He received his Ph.D. degree from School of Creative Media, City University of Hong Kong (2023).
               His research objective is to explore how to develop “touchable” computer interfaces to enable people to have physical interaction in the virtual world. 
-              He strongly believes haptic interaction can provide greater benefit and experience to users in extended reality (XR) environments, including virtual and augmented reality (VR & AR). 
-              His research interest mainly focuses on Human-Computer Interaction (HCI), particularly in the areas of Multimodal and Embodied Interaction, Extended Reality, Wearables, and Haptic Interfaces. 
+              He strongly believes multimodal interaction can provide greater benefit and experience to users in extended reality (XR) environments, including virtual and augmented reality (VR & AR). 
+              Currently, his research interest mainly focuses on Human-Computer Interaction (HCI), particularly in the areas of Multimodal Interfaces, Immersive Reality, Wearables, and Haptic Perception. 
               
-              <div class="email" class="font-italic">
-                <p><b>I am always looking for self-motivated students for HCI and VR/AR-related research. Feel free to contact me if you are interested </b></p> 
-                <p><b>I am particularly welcome NUS MSc students who are willing to do <a href="https://blog.nus.edu.sg/multimodalwearablelab/welcome">CDE5312</a> or EDI internship modules and NUS undergraduates UROP/UREX/FYP. </b></p> 
-                <p>My contact: <em>shaoyucai [AT] nus [DOT] edu [DOT] sg</em></p>
-              </div>
               <p>
                 [<a href="https://cde.nus.edu.sg/edic/staff/cai-shaoyu/">NUS Profile</a>]
                 [<a href="https://scholar.google.com/citations?user=wUpkNc8AAAAJ&hl=en">Google Scholar</a>]
                 [<a href="https://dblp.org/pid/246/5542.html">dblp</a>][<a href="https://www.linkedin.com/in/shaoyu-cai-63a96523a">Linkedin</a>]
               </p>
+              <p>My contact: <em>shaoyucai [AT] nus [DOT] edu [DOT] sg</em></p>
+              <div class="email" class="font-italic">
+                <p><li><i class="fas fa-star"></i>I am recruiting 2–3 <b> Postdoctoral Research Fellows</b> to join Immersive Reality Lab, working on <b>VR/AR, Generative AI, and haptics</b>. Interested candidates are welcome to email me directly.</li>
+                <p> <li><i class="fas fa-star"></i>For <b>NUS students</b>: I particularly welcome MSc students taking <a href="https://blog.nus.edu.sg/multimodalwearablelab/welcome">CDE5312</a>, internship modules (EDI students only), or participating in NUS CDE undergraduate research programmes (UROP/UREX) and Capstone projects (CDE4301). EDIC provides <b>multidisciplinary industry or research-driven</b> projects and support <b>hardware prototyping</b> through well equipped facilities and lab infrastructure.</li>
+                <p><li>I am continually seeking self-motivated students to work on research in HCI and VR/AR. Please feel free to reach out if you are interested in research collaboration.</li>
+              </div>
           </div>
         </div>
       </div>
@@ -132,8 +131,8 @@
             <div class="resume-item">
               <p>
               
-              [2025.09] One paper accepted by PAINE 2025. Congrads to Zhansen and Quanhao!<br>
-              [2025.09] One paper was accepted as CSCW 25'. Congrads to Xinpeng!<br>
+              [2025.11] One paper accepted by PAINE 2025 and won Best Paper Award (only one). Congrads to Jie, Zhansen and Quanhao!<br>
+              [2025.10] One paper was accepted as CSCW 25'. Congrads to Xinpeng!<br>
               [2025.07] <em>Somewhere in This Fog of Memory</em> was accpeted by GoodIT 25! Congrads to Zhansen!<br>
               [2025.07] <em>AromaCanvas</em> was accpeted by CEXR! Congrads to Tao, Quanhao and Fuxi!<br>
               [2025.05] I will serve as program manager (Co-chair) for Siggraph Asia 2025 Emerging Technologies and program committe for UbiComp/ISWC 2025! <br>
@@ -161,13 +160,42 @@
         <!-- paper -->
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/3dic.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>Metaheuristic Color Scheme Strategies for Enhanced Visual Inspection of 3D IC Layouts</h5>
+              <p><em>Jie Zhang, Zhansen Shi, Hanchen Wang, Zhuoyang Zhang, Lucas Lum, Quanhao Gan, <b>Shaoyu Cai</b>, Eng Tat Khoo and Yeow Kheng Lim</em></p>
+              <p><em>2025 IEEE International Conference on Physical Assurance and Inspection of Electronics (PAINE) <b>(Best Paper Award Top-1)</b> </em></p>
+               [<a href="https://pwd.aa.ufl.edu/paine/">Paper</a>]
+	      </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/goodit.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>Interactive Multimodal Storytelling Installation for Dementia Awareness and Engagement: Somewhere in This Fog of Memory</h5>
+              <p><em>Zhansen Shi, Nicolette Jia Yi Tan, Kate Sangwon Lee, <b>Shaoyu Cai</b>, Eng Tat Khoo</em></p>
+              <p><em>In Proceedings of the 2025 International Conference on Information Technology for Social Good (GoodIT '25). ACM New York, USA, 79–89.</em></p>
+               [<a href="https://dl.acm.org/doi/pdf/10.1145/3748699.3749777">Paper</a>]
+               [<a href="https://youtu.be/pKU7OKrw8M0">Video</a>]
+	      </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/mura.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>From Beeping Machines to Caring Companions: Redesigning Social Robots Through Reflective Ethnography in Elderly Care Work</h5>
               <p><em>Xinpeng Liu, Haosu Xu, Yiming Luo, and <b>Shaoyu Cai</b>.</em></p>
-              <p><em>Proceedings of the ACM on Human-Computer Interaction, 9(7), 1-29. <b>(CSCW 2025 Best Paper Honorable Mentions)</b> </em></p>
+              <p><em>Proceedings of the ACM on Human-Computer Interaction, 9(7), 1-29. CSCW 2025. <b>(CSCW 2025 Best Paper Honorable Mentions)</b> </em></p>
                [<a href="https://dl.acm.org/doi/pdf/10.1145/3757603">Paper</a>]
 	      </p>
           </div>
