--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
               </p>
               <p>My contact: <em>shaoyucai [AT] nus [DOT] edu [DOT] sg</em></p>
               <div class="email" class="font-italic">
-                <p><li><i class="fas fa-star"></i>I am recruiting 2–3 <b> Postdoctoral Research Fellows</b> to join Immersive Reality Lab, working on <b>VR/AR, Generative AI, and haptics</b>. Interested candidates are welcome to email me directly.</li>
-                <p> <li><i class="fas fa-star"></i>For <b>NUS students</b>: I particularly welcome MSc students taking <a href="https://blog.nus.edu.sg/multimodalwearablelab/welcome">CDE5312</a>, internship modules (EDI students only), or participating in NUS CDE undergraduate research programmes (UROP/UREX) and Capstone projects (CDE4301). EDIC provides <b>multidisciplinary industry or research-driven</b> projects and support <b>hardware prototyping</b> through well equipped facilities and lab infrastructure.</li>
+                <p></p><li style="color: red;"><i class="fas fa-star"></i>[Pinned Ads] I am recruiting 2–3 <b>Postdoctoral Research Fellows</b> to join Immersive Reality Lab, working on <b>VR/AR, Generative AI, and haptics</b>. Interested candidates are welcome to email me directly.</li>
+                <p><li><i class="fas fa-star"></i>For <b>NUS students</b>: I particularly welcome MSc students taking <a href="https://blog.nus.edu.sg/multimodalwearablelab/welcome">CDE5312</a>, internship modules (EDI students only), or participating in NUS CDE undergraduate research programmes (UROP/UREX) and Capstone projects (CDE4301). EDIC provides <b>multidisciplinary industry or research-driven</b> projects and support <b>hardware prototyping</b> through well equipped facilities and lab infrastructure.</li>
                 <p><li>I am continually seeking self-motivated students to work on research in HCI and VR/AR. Please feel free to reach out if you are interested in research collaboration.</li>
               </div>
           </div>
