--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <h5>Metaheuristic Color Scheme Strategies for Enhanced Visual Inspection of 3D IC Layouts</h5>
               <p><em>Jie Zhang, Zhansen Shi, Hanchen Wang, Zhuoyang Zhang, Lucas Lum, Quanhao Gan, <b>Shaoyu Cai</b>, Eng Tat Khoo and Yeow Kheng Lim</em></p>
               <p><em>2025 IEEE International Conference on Physical Assurance and Inspection of Electronics (PAINE) <b>(Best Paper Award Top-1)</b> </em></p>
-               [<a href="https://pwd.aa.ufl.edu/paine/">Paper</a>]
+               [<a href="assets/img/Metaheuristic_Colors.pdf">Paper</a>]
 	      </p>
           </div>
         </div>
